Fix z-index of search-backdrop.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -103,6 +103,7 @@ $grid-breakpoints: (
 
 $z-index-mobile-nav:          0;
 $z-index-rich-editor-touch:  10;
+$z-index-search-backdrop:    20;
 $z-index-hairline:           20;
 $z-index-search-bar:         30;
 $z-index-touch-side-footer:  30;
