--- a/src/scss/components/_library.scss
+++ b/src/scss/components/_library.scss
@@ -58,6 +58,7 @@
 			bottom: 0;
 			left: 0;
 			background-color: $modal-backdrop-bg;
+			z-index: $z-index-search-backdrop
 		}
 
 		// Start searching in library view
